fix(ssh-key): fix firewall rule types sorting and alignment (closes #868)

--- a/src/app/security-group/sg-rules/sg-rule.component.scss
+++ b/src/app/security-group/sg-rules/sg-rule.component.scss
@@ -7,6 +7,10 @@
   border-bottom: none !important;
 
   .mat-cell {
-    padding: 5px 18px;
+    padding: 5px 10px;
+
+    &.delete-button-cell {
+      padding-right: 2px;
+    }
   }
 }
